cattlevax-sf-sandbox/force-app/main/default/objects/APHA_Invitation__c/APHA_Invitation__c.object-meta.xml
<CustomObject>
    <label>Invitation</label>
    <nameField>
        <displayFormat>VI-{00000000}</displayFormat>
        <label>Invitation Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Invitations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>