cattlevax-sf-sandbox/force-app/main/default/objects/APHA_Invitation__c/fields/APHA_Case__c.field-meta.xml
<CustomField>
    <fullName>APHA_Case__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Parent case</description>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Invitations</relationshipLabel>
    <relationshipName>APHA_Invitations</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>