cattlevax-sf-sandbox/force-app/main/default/objects/APHA_Invitation__c/fields/APHA_Contact__c.field-meta.xml
<CustomField>
    <fullName>APHA_Contact__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Contact to who the invitation is sent</description>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>APHA_VaccinationInvitationsSent</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>