cattlevax-sf-sandbox/force-app/main/default/objects/APHA_Invitation__c/fields/APHA_InvitationRequestId__c.field-meta.xml
<CustomField>
    <fullName>APHA_InvitationRequestId__c</fullName>
    <label>Invitation Request Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>