cattlevax-sf-sandbox/force-app/main/default/objects/APHA_Invitation__c/fields/APHA_TemplateId__c.field-meta.xml
<CustomField>
    <fullName>APHA_TemplateId__c</fullName>
    <label>Template Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>