cattlevax-sf-sandbox/force-app/main/default/objects/APHA_Invitation__c/validationRules/Case_must_be_for_invitation.validationRule-meta.xml
<ValidationRule>
    <fullName>Case_must_be_for_invitation</fullName>
    <active>true</active>
    <description>The case must be of type &quot;TB Vaccination Invitation&quot;</description>
    <errorConditionFormula>ISPICKVAL(APHA_Case__r.Type, &quot;TB Vaccination Invitation&quot; )</errorConditionFormula>
    <errorDisplayField>APHA_Case__c</errorDisplayField>
    <errorMessage>The case must be of type &quot;TB Vaccination Invitation&quot;</errorMessage>
</ValidationRule>