cattlevax-sf-sandbox/force-app/main/default/objects/APHA_Invitation__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>APHA_ContactMethod__c</columns>
    <columns>APHA_Status__c</columns>
    <columns>APHA_ExpectedResponseDate__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>